# LangChainCourse

./: README.md
Capitulo1/: main.py  requirements.txt
Capitulo2/: basico.py  cadena.py
Capitulo3/: rag.py
Capitulo4/: main.py
Capitulo5/: main.py
Tokenizer/: tokenizer.py
llamaindex/: pyproject.toml
llamaindex/src/llamaindex/basic/: main.py
llamaindex/src/llamaindex/basic/storage/: default__vector_store.json  docstore.json  index_store.json
llamaindex2/: pyproject.toml
llamaindex2/src/llamaindex2/basic/: config.py  main.py
