[project]
name = "llamaindex"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Equipo45", email = "ismiruiz@gmail.comm"},
]
dependencies = [
    "llama-index>=0.10.29",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
